# petro_v3_10-11-25__json_SQL-LITE

./: .gitignore  .replit  DAILY_PROGRESS.md  FILE_STORAGE_ARCHITECTURE.md  STORAGE_ARCHITECTURE.md  SYSTEM_STATUS_REPORT.md  dev.ps1  dev.sh  package-lock.json  package.json  production.sh  replit.md
attached_assets/: Pasted--1-10-am-14-11-2025-Rajesh-Kumar-2-Runtime-Lazy-Loading-Wells-are-loaded-from-disk-ONLY-wh-1763087904290_1763087904462.txt  Pasted--1-30-am-13-11-2025-Rajesh-Kumar-app-py-from-contextlib-import-asynccontextmanager-import-json--1763088715951_1763088715952.txt  Pasted--2-25-am-14-11-2025-Rajesh-Kumar-INFO-Will-watch-for-changes-in-these-directories-C-ai--1763088174581_1763088174583.txt  (+3 more)
backend/: SCHEMA_UPDATES_SUMMARY.md  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt
backend/layouts/: perfs_cpi_logplot_layout.xml
backend/routers/: cli.py  data.py  directories.py  file_upload.py  projects.py  sessions.py  settings.py  storage_inspector.py  tops.py  well_sessions.py  wells.py  workspace.py  workspace_sync.py
backend/utils/: LogPlot.py  cli_service.py  cpi_plotly.py  data_import_export.py  fe_data_objects.py  file_well_storage.py  json_storage.py  las_file_io.py  matplotlib_cpi_plot.py  migrate_schema_updates.py  migrate_to_sqlite.py  migrate_wells_schema.py  migrate_wells_schema_v2.py  project_utils.py  sqlite_storage.py  sqlite_storage_example.py  test_font_sizes.py  well_session_manager.py  zonation_utils.py
data/: application_setting.json  application_setting.json.backup  petrophysics.db-shm  ui_settings.json
(+72 files in other folders)
